--- a/Humour.Mvc/Views/Story/Index.cshtml
+++ b/Humour.Mvc/Views/Story/Index.cshtml
@@ -1,34 +1,71 @@
 ﻿@using Humour.Model;
 @model Humour.Mvc.Models.PagerModel<Humour.Mvc.Models.Story.DisplayStory>
 @{
-    ViewBag.Title = "Contact People";
+    ViewBag.Title = "Index";
 }
-@if (Model.Data.Any())
-{
-    var grid = new WebGrid(null, defaultSort: "FirstName", columnNames: new[] { "Id", "FullName", "DateOfBirth", "Type" }, rowsPerPage: Model.PageSize);
-    grid.Bind(Model.Data, rowCount: Model.TotalRows, autoSortAndPage: false);
 
-    @grid.GetHtml(columns: grid.Columns(
-   grid.Column("Id"),
-   grid.Column(header: "Title", columnName: "Content", format: (item) => Html.ActionLink(((string)item.FullName), "Details", new { item.id })),
-   grid.Column("DateOfBirth", header: "Date of Birth", format: (item) => item.DateOfBirth.ToString("d")),
-   grid.Column("Type", canSort: false),
-   grid.Column(header: "Addresses", format: item => new HtmlString(
-                Html.ActionLink("Home", "Edit", "Addresses", new { personId = item.Id, contactType = (int)ContactType.Personal }, null).ToString() + " | " +
-                Html.ActionLink("Work", "Edit", "Addresses", new { personId = item.Id, contactType = (int)ContactType.Business }, null).ToString())
-   ),
-   grid.Column(format: (item) => Html.ActionLink("E-mail addresses", "List", "EmailAddresses", new { personId = item.id }, null)),
-   grid.Column(format: (item) => Html.ActionLink("Phone numbers", "List", "PhoneNumbers", new { personId = item.id }, null)),
-   grid.Column(format: (item) => Html.ActionLink("Edit", "Edit", new { item.id })),
-   grid.Column(format: (item) => Html.ActionLink("Delete", "Delete", new { item.id }))
-  )
- )
-}
-else
-{
-    <p>No contact people found.</p>
-}
+<h2>Index</h2>
+
 <p>
-    @Html.ActionLink("Create new contact person", "Create")
+    @Html.ActionLink("Create New", "Create")
 </p>
+<table class="table">
+    <tr>
+        <th>
+            Rating
+        </th>
+        <th>
+            Title
+        </th>
+        <th>
+            Content
+        </th>
+        <th>
+            URL
+        </th>
+        <th>
+            Added Date
+        </th>
+        <th>
+            Story Type
+        </th>
+    </tr>
 
+    @foreach (var item in Model.Data)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Content)
+            </td>
+            <td>
+                @if (item.VideoURL != null)
+                {
+                    <iframe width="210" height="158" src="@item.VideoURL" frameborder="0" allowfullscreen></iframe>
+                }
+
+                @if (item.ImageURL != null)
+                {
+                    <img src="@item.ImageURL" />
+                }
+            </td>
+            <td>
+@*                @Html.DisplayFor(modelItem => item.AddedDate)*@
+            </td>
+            <td>
+  @*              @Html.DisplayFor(modelItem => item.StoryType.Name)*@
+            </td>
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
+
+</table>
