--- a/Humour.Mvc/Views/Story/_CreateOrEdit.cshtml
+++ b/Humour.Mvc/Views/Story/_CreateOrEdit.cshtml
@@ -1,82 +1,70 @@
-﻿@model Humour.Model.Story
+﻿@*@using Humour.Model;*@
+@model Humour.Mvc.Models.Story.CreateAndEditStory
 
+@*<div class="form-group">
+        @Html.LabelFor(model => model.StoryTypeID, "StoryTypeID", new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("StoryTypeID")
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Story</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateCreated, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateCreated)
-                @Html.ValidationMessageFor(model => model.DateCreated)
-            </div>
+            @Html.ValidationMessageFor(model => model.StoryTypeID)
         </div>
+    </div>*@
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateModified, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateModified)
-                @Html.ValidationMessageFor(model => model.DateModified)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Title)
-                @Html.ValidationMessageFor(model => model.Title)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Content, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Content)
-                @Html.ValidationMessageFor(model => model.Content)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.VideoURL, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.VideoURL)
-                @Html.ValidationMessageFor(model => model.VideoURL)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ImageURL, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ImageURL)
-                @Html.ValidationMessageFor(model => model.ImageURL)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Rating, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Rating)
-                @Html.ValidationMessageFor(model => model.Rating)
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+<div class="form-group">
+    @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @*@Html.EditorFor(model => model.Title)*@
+        @Html.TextBoxFor(model => model.Title, new { style = "width: 500px;" })
+        @Html.ValidationMessageFor(model => model.Title)
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<div class="form-group">
+    @Html.LabelFor(model => model.Content, new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @*@Html.EditorFor(model => model.Content)*@
+
+        @Html.TextAreaFor(model => model.Content, 15, 200, null)
+
+        @Html.ValidationMessageFor(model => model.Content)
+    </div>
+</div>
+
+
+<div class="form-group">
+    @Html.LabelFor(model => model.VideoURL, new { @class = "control-label col-md-2" }) eg //www.youtube.com/embed/y0TxfwB3BWQ?rel=0
+    <div class="col-md-10">
+        @*                @Html.EditorFor(model => model.VideoURL)*@
+        @Html.TextBoxFor(model => model.VideoURL, new { style = "width: 500px;" })
+
+
+        @Html.ValidationMessageFor(model => model.VideoURL)
+    </div>
+</div>
+
+<div class="form-group">
+    @Html.LabelFor(model => model.ImageURL, new { @class = "control-label col-md-2" }) eg http://newsimg.bbc.co.uk/media/images/40190000/jpg/_40190457_milligangrave202250.jpg
+    <div class="col-md-10">
+        @*                @Html.EditorFor(model => model.ImageURL)*@
+        @Html.TextBoxFor(model => model.ImageURL, new { style = "width: 500px;" })
+
+
+        @Html.ValidationMessageFor(model => model.ImageURL)
+    </div>
+</div>
+
+@*<div class="form-group">
+        @Html.LabelFor(model => model.AddedDate, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AddedDate)
+            @Html.ValidationMessageFor(model => model.AddedDate)
+        </div>
+    </div>*@
+
+<div class="form-group">
+    @Html.LabelFor(model => model.Rating, new { @class = "control-label col-md-2" })
+    <div class="col-md-10">
+        @Html.EditorFor(model => model.Rating)
+        @Html.ValidationMessageFor(model => model.Rating)
+    </div>
+</div>
