--- a/Humour.Mvc/Views/Story/Index.cshtml
+++ b/Humour.Mvc/Views/Story/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            Rating
+            @Html.ActionLink("Rating", "Index", new { sort = "Rating" }) 
         </th>
         <th>
             Title
@@ -24,11 +24,11 @@
             URL
         </th>
         <th>
-            Added Date
+            @Html.ActionLink("Date Created", "Index", new { sort = "DateCreated" }) 
         </th>
-        <th>
+        @*<th>
             Story Type
-        </th>
+        </th>*@
     </tr>
 
     @foreach (var item in Model.Data)
@@ -55,11 +55,9 @@
                 }
             </td>
             <td>
-@*                @Html.DisplayFor(modelItem => item.AddedDate)*@
+                @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
-            <td>
-  @*              @Html.DisplayFor(modelItem => item.StoryType.Name)*@
-            </td>
+                @*              @Html.DisplayFor(modelItem => item.StoryType.Name)*@
 
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
