--- a/Humour.Mvc/Views/Story/Edit.cshtml
+++ b/Humour.Mvc/Views/Story/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Humour.Mvc.Models.Story.CreateAndEditStory
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
@@ -15,7 +15,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
