--- a/Humour.Mvc/Views/Story/_CreateOrEdit.cshtml
+++ b/Humour.Mvc/Views/Story/_CreateOrEdit.cshtml
@@ -31,10 +31,9 @@
 </div>
 
 
-<div class="form-group">
+@*<div class="form-group">
     @Html.LabelFor(model => model.VideoURL, new { @class = "control-label col-md-2" }) eg //www.youtube.com/embed/y0TxfwB3BWQ?rel=0
     <div class="col-md-10">
-        @*                @Html.EditorFor(model => model.VideoURL)*@
         @Html.TextBoxFor(model => model.VideoURL, new { style = "width: 500px;" })
 
 
@@ -45,13 +44,12 @@
 <div class="form-group">
     @Html.LabelFor(model => model.ImageURL, new { @class = "control-label col-md-2" }) eg http://newsimg.bbc.co.uk/media/images/40190000/jpg/_40190457_milligangrave202250.jpg
     <div class="col-md-10">
-        @*                @Html.EditorFor(model => model.ImageURL)*@
         @Html.TextBoxFor(model => model.ImageURL, new { style = "width: 500px;" })
 
 
         @Html.ValidationMessageFor(model => model.ImageURL)
     </div>
-</div>
+</div>*@
 
 @*<div class="form-group">
         @Html.LabelFor(model => model.AddedDate, new { @class = "control-label col-md-2" })
